--- a/src/app/pages/map/greeting-view/greeting-view.component.html
+++ b/src/app/pages/map/greeting-view/greeting-view.component.html
@@ -5,7 +5,7 @@
 <ion-icon name="chat" *ngIf="isShowChatIcon == true || isUserConnected" class="greeting-icon"
     (click)="chatWithUser()"></ion-icon> -->
 
-<ion-icon name="greeting-blink" class="greeting-icon"
+<ion-icon [name]="getGreetingIcon()" class="greeting-icon"
     (click)="showGreetingActions()"></ion-icon>
 
 <ion-modal #greetingAcceptRejectModal [initialBreakpoint]="0.31" [showBackdrop]="true" [breakpoints]="[0.25]">
