--- a/src/app/pages/map/viewing-users/viewing-users.component.html
+++ b/src/app/pages/map/viewing-users/viewing-users.component.html
@@ -28,6 +28,15 @@
       Ignored
     </ion-button>
   </div>
+
+  <div class="maptab" *ngIf="viewTemplate != 'Viewing'">
+    <ion-button shape="round" [ngClass]="{'active':activeOrExpired == 1}" (click)="activeExpiredGreeting(1)">
+      Active
+    </ion-button>
+    <ion-button shape="round" [ngClass]="{'active':activeOrExpired == 2}" (click)="activeExpiredGreeting(2)">
+      Expired
+    </ion-button>
+  </div>
 </ion-header>
 <ion-content>
 
@@ -35,8 +44,8 @@
     <ion-list style="padding:0px">
       <!-- *ngFor="let user of viewTemplate == 'Viewing'? _commonService.viewingUsers: _commonService.greetingWithDetails ;let i=index"> -->
       <div
-        *ngFor="let user of viewTemplate == 'Viewing'? viewList.names : greetingListApi ;let i=index">
-        <div class="lines-bottom ion-padding">
+        *ngFor="let user of viewTemplate == 'Viewing'? viewList.names : filteredGreetingList ;let i=index">
+        <div *ngIf="filteredGreetingList.length > 0 || viewList.names.length > 0" class="lines-bottom ion-padding">
           <div *ngIf="viewTemplate != 'Viewing' " (click)="openUser(user)" class="display-flex--row flex-align-center">
             <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
               <img animation="gradient" src="{{appConstants.mediaPrefix + ((user.CreatedBy.ProfileImage) || (user.UserProfilePhoto)) }}"
@@ -48,7 +57,7 @@
             </div>
           </div>
 
-          <div *ngIf="viewTemplate == 'Viewing' "  (click)="openUser(user)" class="display-flex--row flex-align-center">
+          <div *ngIf="viewTemplate == 'Viewing'"  (click)="openUser(user)" class="display-flex--row flex-align-center">
             <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
               <img animation="gradient" src="{{appConstants.mediaPrefix + user.UserProfilePhoto }}"
               onError="this.src='assets/icons/business/anonymous.svg'"
@@ -64,18 +73,25 @@
             <div class="action-list">
 
               <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
+              <ion-icon *ngIf="viewTemplate == 'Viewing' " name="greeting-blink" style="font-size: 36px;" (click)="greetingRecieved(user)"></ion-icon>
               <greeting-view *ngIf="viewTemplate != 'Viewing' "  [fromUserId]="user.CreatedBy.Id || user.UserId" [fromUserName]="user.CreatedBy.UserName || user.UserName"
                 [fromUserProfile]="(user.CreatedBy.Id + '/' + user.CreatedBy.ProfileImage) || (user.UserId + '/' + user.UserProfilePhoto)" [userInfo]="user">
               </greeting-view>
-              <greeting-view *ngIf="viewTemplate == 'Viewing' "  [fromUserId]="user.UserId" [fromUserName]="user.UserName"
-              [fromUserProfile]="user.UserId + '/' + user.UserProfilePhoto" [userInfo]="user">
-            </greeting-view>
-              <!-- <ion-icon name="greeting-no-circle" style="font-size: 36px;" (click)="greetingRecieved(user)"></ion-icon> -->
+              <!-- <greeting-view *ngIf="viewTemplate == 'Viewing' "  [fromUserId]="user.UserId" [fromUserName]="user.UserName"
+                [fromUserProfile]="user.UserId + '/' + user.UserProfilePhoto" [userInfo]="user">
+              </greeting-view> -->
+              <!-- <ion-icon name="greeting-blink" style="font-size: 36px;" (click)="greetingRecieved(user)"></ion-icon> -->
               <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
               <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
             </div>
           </div>
         </div>
+      </div>
+      <div *ngIf="viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 1">
+        <p>Currently No Active Greeting Requests!</p>
+      </div>
+      <div *ngIf="viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 2">
+        <p>Currently No Expired Greeting Requests!</p>
       </div>
     </ion-list>
   </div>
