--- a/src/app/pages/auth/login/login.page.scss
+++ b/src/app/pages/auth/login/login.page.scss
@@ -1,6 +1,7 @@
 // .login-main {
   .fi-padding{
    padding: 0px 9px !important;
+   margin-bottom: 15px;
   }
   .fi-margin{
    width: 95% !important;
