--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -6,7 +6,7 @@
         <ion-text>Global</ion-text>
         <ion-toggle [(ngModel)]="globalSearch" class="ion-no-padding"></ion-toggle>
       </div>
-      <ion-button shape="round">Advanced search</ion-button>
+      <!-- <ion-button shape="round">Advanced search</ion-button> -->
     </ion-buttons>
   </ion-toolbar>
   <ion-searchbar autocapitalize="off" autocomplete="off" search-icon="searchi" class="ion-no-padding"
