--- a/src/app/pages/sidemenu/finitee-services/service-available/service-available-list/service-available-list.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-available/service-available-list/service-available-list.page.html
@@ -152,8 +152,8 @@
   <ng-container *ngIf="!loading && serviceRequiredService.serviceList.length == 0">
     <div class="nodata">
       <img style="margin-top: 20px;" src="assets/imgs/new/NoData.png">
-      <h3> You have no service available listings at this time.</h3>
-      <h3> Create a service available listing to put your talents to good use.</h3>
+      <h3 style="font-size: 20px;"> You have no service available listings at this time.</h3>
+      <h3 style="font-size: 20px;"> Create a service available listing to put your talents to good use.</h3>
     </div>
   </ng-container>
   <br>
