--- a/src/app/pages/sidemenu/finitee-services/service-required/create-edit-service-required/create-edit-service-required.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-required/create-edit-service-required/create-edit-service-required.page.html
@@ -238,7 +238,7 @@
     </div> -->
 
 
-    <ion-button style="text-transform: none; height: 46px; font-size: 20px;" [disabled]="!form.valid" expand="block" shape="round" color="primary"
+    <ion-button style="text-transform: none; height: 46px; font-size: 20px; margin-bottom: 10px;" [disabled]="!form.valid" expand="block" shape="round" color="primary"
       type="submit">
       <span  *ngIf="!isEdit">Create</span>
       <span *ngIf="isEdit">Save</span>
