--- a/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.scss
+++ b/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.scss
@@ -28,6 +28,8 @@ ion-content {
           background: #EAF1F4;
           border-radius: 22px;
           margin: 0;
+          width: 230px;
+          height: 83px;
           & > ion-card-content {
             padding: 4px 13px;
             height: 83px;
