--- a/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.html
@@ -18,11 +18,13 @@
       Active
     </ion-text>
   </ion-segment>
-  <ion-grid>
+  <ion-grid style="    padding-left: 0px;
+  padding-right: 5px;">
     <ng-container *ngFor="let i of serviceRequiredService.serviceList; let last = last">
       <ion-row   class="ion-align-items-center" (click)="viewDetails(i.Id)" *ngIf="i.DaysLeft >= 0">
         <ion-col size="4">
-          <img src="appConstants.mediaPrefix+i.ImageList[0]"
+          <img style="width: 114px;
+          height: 83px;" src="appConstants.mediaPrefix+i.ImageList[0]"
           onError="this.src='assets/custom-ion-icons/trait_thumnail.svg'">
         </ion-col>
         <ion-col size="8">
