--- a/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.html
+++ b/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.html
@@ -4,7 +4,7 @@
       <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg">
       </ion-back-button>
     </ion-buttons>
-    <ion-title>Edit Shopping List</ion-title>
+    <ion-title>Add Item</ion-title>
     <ion-buttons slot="end">
 
     </ion-buttons>
@@ -15,58 +15,144 @@
 
   <form #form="ngForm">
 
-    <ion-grid>
+    <div>
+      <div>
+       <div style="margin-bottom: 20px;">
+        <p style="margin-bottom: 7px;  margin-top: 7px; font-weight: 500;">Shopping words</p>
+        <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input shoppingword" lines="none">
+          <ion-input type="text" style="text-align:left; font-size: 12px;" 
+            ></ion-input>
+        </ion-item>
+       </div> 
+       <div style="margin-bottom: 20px;">
+        <p style="margin-bottom: 7px; margin-top: 7px; font-weight: 500;">Price</p>
+        <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input shoppingword" lines="none">
+          <ion-input class="text-start" type="text" style="text-align:left; font-size: 12px;" 
+            ></ion-input>
+        </ion-item>
+       </div>
+       <div style="margin-bottom: 20px;">
+        <p style="margin-bottom: 7px; margin-top: 7px; font-weight: 500;">Condition</p>
+        <ion-item style="margin-left: -7px; width: 256px;
+        height: 53px; --border-style: none; "  color="none" class="input shoppingword">
+       
+          <ion-select  aria-label="Fruit" interface="popover" class="janvi" placeholder="New">
+            <ion-select-option  style="margin-left: 7px; text-align: left; --margin-bottom:0px !important;" value="new">New</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: center; margin-bottom: 0px;" value="likenew">Like New</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: left; margin-bottom: 0px;" value="Refurbushed">Refurbushed</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: center; margin-bottom: 0px;" value="Used">Used</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: left; margin-bottom: 0px;" value="Not Working">Not Working</ion-select-option>
+          </ion-select>
+        </ion-item>
+       </div>
+       <div style="margin-bottom: 20px;">
+        <p style="margin-bottom: 7px; margin-top: 7px; font-weight: 500;">Distance(km)</p>
+        <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input text-start shoppingword" lines="none">
+          <ion-input aria-placeholder="Distance" type="text" style="font-size: 12px; text-align: left;" 
+            ></ion-input>
+        </ion-item>
+       </div>
+      </div>
+    </div>
+
+    
+
+
+
+
+
+    <!-- <ion-grid>
+      <ion-row>
+        <ion-col class="input shoppingword" style="margin-left: -7px; height: 50px; width: 100%;">
+          <p class="title_toshopping">Shopping Words</p>
+          <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input shoppingword" lines="none">
+             <ion-input type="text" style="text-align: center; font-size: 12px;" 
+               ></ion-input>
+           </ion-item></ion-col>
+        <ion-col class="input shoppingword" style="margin-left: -7px; height: 50px; width: 100%;">
+          <p class="title_toshopping">Shopping Words</p>
+          <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input shoppingword" lines="none">
+             <ion-input type="text" style="text-align: center; font-size: 12px;" 
+               ></ion-input>
+           </ion-item></ion-col>
+      </ion-row>
+    </ion-grid> -->
+
+    <!-- <ion-col>
+      <ion-col > 
+        <p class="title_toshopping">Shopping Words</p>
+       <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input shoppingword" lines="none">
+          <ion-input type="text" style="text-align: center; font-size: 12px;" 
+            ></ion-input>
+        </ion-item>
+      </ion-col>
+
+
+
+
+    
+
+      <ion-col > 
+        <p class="title_toshopping">Price</p>
+       <ion-item style="margin-left: -7px; height: 50px; width: 100%;"  color="none" class="input shoppingword" lines="none">
+          <ion-input type="text" style="text-align: center; font-size: 12px;" 
+            ></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-col> -->
+
+    <!-- <ion-grid>
       <ion-row style="font-weight: bold;">
         <ion-col size="4" style="font-size: 13px; text-align: center;">Shopping word</ion-col>
         <ion-col size="2" style="font-size: 13px; text-align: center;">Price</ion-col>
         <ion-col size="3" style="font-size: 13px; text-align: center;">Condition</ion-col>
         <ion-col size="3" style="font-size: 13px; text-align: center;">Distance <br>   (km)</ion-col>
       </ion-row>
-    </ion-grid>
+    </ion-grid> -->
 
     <!-- Repeat this structure for all 5 items -->
-    <ng-container *ngFor="let shoppingItem of shoppingListWords; let i = index">
+    <!-- <ng-container *ngFor="let shoppingItem of shoppingListWords; let i = index">
 
       <ion-item>
 
         <ion-grid class="ion-no-padding">
           <ion-row>
-            <ion-col size="4">
+            <ion-col size="4"> -->
               <!-- Shopping Word Field -->
-              <ion-item color="none" class="input" lines="none">
+              <!-- <ion-item color="none" class="input" lines="none">
                 <ion-input type="text" style="text-align: center; font-size: 12px;" name="Word{{i}}"
                   [(ngModel)]="shoppingItem.Word"></ion-input>
               </ion-item>
             </ion-col>
-            <ion-col size="2">
+            <ion-col size="2"> -->
               <!-- Price Field -->
-              <ion-item color="none" class="input" lines="none">
+              <!-- <ion-item color="none" class="input" lines="none">
                 <ion-input type="number" style="text-align: center; font-size: 12px;" name="Price{{i}}"
                   [(ngModel)]="shoppingItem.Price" #price="ngModel"></ion-input>
               </ion-item>
             </ion-col>
-            <ion-col size="3">
+            <ion-col size="3"> -->
               <!-- Condition Field -->
-              <ion-item  id="pop-condition-{{i}}" color="none" class="input" lines="none">
+              <!-- <ion-item  id="pop-condition-{{i}}" color="none" class="input" lines="none">
                 <p style="text-align: center; font-size: 12px;" *ngIf="shoppingItem.Condition">{{commonService.getCondition(shoppingItem.Condition)}}</p>
-                <h3 *ngIf="!shoppingItem.Condition">select</h3>
+                <h3 *ngIf="!shoppingItem.Condition">select</h3> -->
                 <!-- <ion-input  type="text" readonly style="text-align: center; font-size: 12px;" name="Condition{{i}}"
                   [(ngModel)]="shoppingItem.Condition">
                 </ion-input> -->
-              </ion-item>
+              <!-- </ion-item>
             </ion-col>
-            <ion-col size="2.8">
+            <ion-col size="2.8"> -->
               <!-- Distance Field -->
-              <ion-item color="none" lines="none">
+              <!-- <ion-item color="none" lines="none">
                 <ion-input type="number" class="input" style="text-align: center; font-size: 12px;" name="Distance{{i}}"
                   [(ngModel)]="shoppingItem.Distance" #distance="ngModel"></ion-input>
               
                 
-                    <ion-icon style="width: 17px; margin-left: 3px;" name="delete-product"></ion-icon>
+                    <ion-icon style="width: 17px; margin-left: 3px;" name="delete-product"></ion-icon> -->
                 
              <!-- <h3>     km</h3> -->
              
-              </ion-item>
+              <!-- </ion-item>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -87,7 +173,7 @@
         </ng-template>
       </ion-popover>
 
-    </ng-container>
+    </ng-container> -->
 
 
   </form>
