--- a/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.scss
+++ b/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.scss
@@ -44,5 +44,47 @@ ion-popover {
       }
   
     }
+
+    .shoppingword{
+      width: 394px;
+height: 48px;
+/* UI Properties */
+background: #F0F5F7 0% 0% no-repeat padding-box;
+border: 1px solid #70707033;
+border-radius: 11px;
+opacity: 1;
+    }
+
+  .title_toshopping{
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) var(--unnamed-font-size-13)/24px var(--unnamed-font-family-sf-pro-display);
+letter-spacing: var(--unnamed-character-spacing-0-21);
+text-align: left;
+font: normal normal 600 13px/24px SF Pro Display;
+letter-spacing: 0.21px;
+color: #0B1131;
+opacity: 1;
+  }
+
+.item .sc-ion-label-md-h{
+  margin-left: 10px !important;
+}
+ion-list-header.sc-ion-select-popover-md, ion-label.sc-ion-select-popover-md {
+  margin-left: 10px !important;
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+
+
+
   
   }
+
+  // .janvi {
+  //   background: #ffffff;
+  //   border: 1px solid #70707078;
+  //   border-radius: 11px;
+  //   opacity: 1;
+  // }
+  
