--- a/src/app/pages/sidemenu/shopping-listing/shopping-list/shopping-list.page.scss
+++ b/src/app/pages/sidemenu/shopping-listing/shopping-list/shopping-list.page.scss
@@ -3,7 +3,87 @@
     box-shadow: 0px 5px 6px #0000000d;
     opacity: 1;
     font-weight: bold;
-    text-align: center;
+    
      
 }
- 
+
+.box-shadow .janvi2{
+    flex: 0;
+    width: 0;
+    max-width: 0;
+}
+
+// ion-col.md .hydrated {
+//     flex: initial !important;
+//     width: 0 !important;
+//     max-width: 0 !important;
+// }
+
+.words{
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 16px/21px var(--unnamed-font-family-sf-pro-display);
+    color: var(--unnamed-color-1a3253);
+  
+    font: normal normal 600 16px/21px SF Pro Display;
+    letter-spacing: 0.25px;
+    color: #1A3253;
+    opacity: 1;
+}
+
+.table-row{
+    display: table;
+    width: 100%;
+    height: 50px;
+    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 5px 6px #0000000D;
+    opacity: 1;
+}
+.table-cell{
+    display: table-cell;
+    width: auto;
+    text-align: center;
+    padding: 4px 0;
+    vertical-align: middle;
+}
+
+.table-box {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .table-row {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+  }
+  
+  .table-cell {
+    flex: 1;
+    text-align: center;
+   
+  }
+  
+  .header {
+    font-weight: bold;
+  }
+
+//   .ion-fab-button {
+//     margin: 5px;
+//     --border-radius: 6px;
+//     width: 50px;
+//     height: 50px;
+//     transform: rotate(45deg);
+//     margin-right: 19px;
+//     ion-icon {
+//       transform: rotate(45deg);
+//     }}
+
+.table-cell p{
+    font: var(--unnamed-font-style-normal) normal bold 15px/21px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-1a3253);
+
+font: normal normal bold 15px/21px SF Pro Display;
+letter-spacing: 0.24px;
+color: #1A3253;
+opacity: 1;
+}
