implemented clustering algorithm for non user markers, added new icons, solved chat bug

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -9,7 +9,7 @@
             <ion-icon style="font-size: 24px;" name="refresh-outline" (click)="refreshMarker()"></ion-icon>
           </div>
           <div style="line-height: 5px;">
-            <ion-icon style="font-size: 16px;margin-right: 10px;" name="close-icon" (click)="clearResults()"></ion-icon>
+            <ion-icon style="font-size: 16px;margin-right: 10px;" name="close-icon" (click)="clearResults(true)"></ion-icon>
           </div>
         </div>
 
