--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -356,7 +356,7 @@
               onError="this.src='assets/icons/business/anonymous.svg'"/>
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
+                <span class="font-sz-14">{{user['Title']}}</span>
               </div>
             </div>
 
@@ -365,7 +365,7 @@
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
                 <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['FirstName']"
                 [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
                 <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
