--- a/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.html
+++ b/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.html
@@ -36,12 +36,12 @@
         <ion-item style="margin-left: -7px; width: 256px;
         height: 53px; --border-style: none; "  color="none" class="input shoppingword">
        
-          <ion-select  aria-label="Fruit" interface="popover" class="janvi" placeholder="New">
-            <ion-select-option  style="margin-left: 7px; text-align: left; --margin-bottom:0px !important;" value="new">New</ion-select-option>
-            <ion-select-option style="margin-left: 7px; text-align: center; margin-bottom: 0px;" value="likenew">Like New</ion-select-option>
-            <ion-select-option style="margin-left: 7px; text-align: left; margin-bottom: 0px;" value="Refurbushed">Refurbushed</ion-select-option>
-            <ion-select-option style="margin-left: 7px; text-align: center; margin-bottom: 0px;" value="Used">Used</ion-select-option>
-            <ion-select-option style="margin-left: 7px; text-align: left; margin-bottom: 0px;" value="Not Working">Not Working</ion-select-option>
+          <ion-select style="margin-bottom: 0px !important;"  aria-label="Fruit" interface="popover"  placeholder="New">
+            <ion-select-option  style="margin-left: 7px; text-align: left; margin-bottom:0px !important;" value="new">New</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: center; margin-bottom: 0px !important;" value="likenew">Like New</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: left; margin-bottom: 0px !important;" value="Refurbushed">Refurbushed</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: center; margin-bottom: 0px !important;" value="Used">Used</ion-select-option>
+            <ion-select-option style="margin-left: 7px; text-align: left; margin-bottom: 0px !important;" value="Not Working">Not Working</ion-select-option>
           </ion-select>
         </ion-item>
        </div>
