--- a/src/global.scss
+++ b/src/global.scss
@@ -104,7 +104,7 @@ ion-footer {
 } */
 
 ion-item {
-  // margin-bottom: 15px;
+  margin-bottom: 15px;
   --padding-start: 0;
   --inner-padding-end: 0;
 }
