--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -188,7 +188,7 @@
             <ion-label>
               <h3>{{user.UserName}}</h3>
               <!-- <p class="ion-text-wrap">{{user.About}}</p> -->
-              <p class="ion-text-wrap">100 Posts - 1.1k Connections (test)</p>
+              <p class="ion-text-wrap">{{user.TotalPosts}} Posts - {{user.TotalConnections}} Connections</p>
             </ion-label>
           </ion-item>
         </div>
