--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -26,8 +26,17 @@
   </ion-refresher>
   <ion-card class="header-card">
     <ion-card-header>
-      <img class="fi-user-img" src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}"
+      
+      <!-- <div class="image_container" style="height: 160px; width: 160px; border-radius: 50%; position: relative; display: inline-block; overflow: hidden; border: 5px solid white;">
+        <img  style="width: 100%; height: 100%;" src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}"
         onError="this.src='assets/icons/business/anonymous.svg'" />
+      </div> -->
+
+      <div class="image_container">
+        <img  class="fi-user-img" src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}"
+        onError="this.src='assets/icons/business/anonymous.svg'" (click)="openImage(userCanvasProfile.canvasProfile.ProfileImage)"/>
+      </div>
+      
       <ion-card-title> {{userCanvasProfile.canvasProfile.DisplayName}}</ion-card-title>
       <ion-card-subtitle> @{{userCanvasProfile.canvasProfile.UserName}} | {{userCanvasProfile.InflowsCount}} Inflows</ion-card-subtitle>
     </ion-card-header>
