--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -37,8 +37,7 @@
 
     <ion-card-header class="followeruser" style="background-color:  #EAF1F4;">
       <ion-text class="ion-text-center name">{{currentItem.FirstName}} {{currentItem.LastName}} </ion-text>
-      <ion-card-subtitle class="fi-multiline-truncate username">@{{currentItem.UserName}} | 100
-        Followers</ion-card-subtitle>
+      <ion-card-subtitle class="fi-multiline-truncate username">@{{currentItem.UserName}} | {{currentItem.InflowsCount || 0}} Inflows</ion-card-subtitle>
     </ion-card-header>
 
 
@@ -47,7 +46,7 @@
       <ion-row class="header-card-details">
 
         <ion-button shape="round" size="small" color="light" class="endorsement-btn" (click)="tempClick()">
-          5.2k Connections
+          {{currentItem.TotalConnections}} Connections
         </ion-button>
 
 
@@ -58,23 +57,32 @@
           <!-- <greeting-view *ngIf="currentItem.Greeting === 1"  [fromUserId]="user.UserId" [fromUserName]="currentItem.UserName"
           [fromUserProfile]="user.UserId + '/' + user.UserProfilePhoto" [userInfo]="user">
           </greeting-view> -->
-          <ion-icon [name]="getGreetingIcon()" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <ion-icon *ngIf="currentItem.IsConnected === false" [name]="getGreetingIcon()" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <!-- <ion-icon *ngIf="currentItem.Greeting === 2 " name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <ion-icon *ngIf="currentItem.Greeting === 3 " name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <ion-icon *ngIf="currentItem.Greeting === 4 " name="greeting-blink" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
           <ion-icon *ngIf="currentItem.Greeting === 5 " name="greeting-sent" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon> -->
 
-          <ion-icon name="onhold" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
-          <ion-icon name="user-block" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
+          <!-- removed onHold functionality -->
+          <!-- <ion-icon name="onhold" style="font-size: 36px;" (click)="tempClick()"></ion-icon> -->
+
+          <ion-icon *ngIf="currentItem.IsConnected === false" name="free-user-request-white-icon" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
+
+          <div *ngIf="currentItem.IsConnected === true" class="chat">
+            <ion-icon name="chatwhite" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
+            Chat Now
+          </div>
 
         </div>
       </ion-row>
     </ion-card-content>
   </ion-card>
   <ion-icon *ngIf="showPrevious" name="chevron-back-circle-outline" class="back"
-    (click)="loadNextItem(true)"></ion-icon>
+    (click)="loadNextItem(true)">
+  </ion-icon>
 
 
+  <!-- Business -->
   <ion-card class="header-card" *ngIf="currentItem.entity=='U' && currentItem.UserTypeId==2">
     <ion-text>{{currentItem.DisplayName}}</ion-text>
     <p><ion-text>{{currentItem.SonorDescription}}</ion-text></p>
@@ -120,7 +128,8 @@
   <ion-text>My Traits</ion-text>
 </div>
 
-<div *ngIf="currentItem.entity=='U' " class="alltraits">
+<!-- <div *ngIf="currentItem.entity=='U' " class="alltraits">
+  
   <ion-chip class="person_trait" color="primary">Dance</ion-chip>
   <ion-chip class="person_trait" color="primary">football Play</ion-chip>
   <ion-chip class="person_trait" color="primary">Music</ion-chip>
@@ -128,7 +137,7 @@
   <ion-chip class="person_trait" color="primary">Event creating</ion-chip>
   <ion-chip class="person_trait" color="primary">Reading Books</ion-chip>
   <ion-chip class="person_trait" color="primary">Stiching</ion-chip>
-</div>
+</div> -->
 
 
 <!-- <div *ngIf="currentItem.entity=='U' && currentItem.UserTypeId==2">
