--- a/src/app/pages/map/viewing-users/viewing-users.component.html
+++ b/src/app/pages/map/viewing-users/viewing-users.component.html
@@ -69,7 +69,7 @@
           </div>
 
           <div class="display-flex--row flex-align-center">
-            <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">1 Miles away </div>
+            <!-- <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">1 Miles away </div> -->
             <div class="action-list">
 
               <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
@@ -81,8 +81,8 @@
                 [fromUserProfile]="user.UserId + '/' + user.UserProfilePhoto" [userInfo]="user">
               </greeting-view> -->
               <!-- <ion-icon name="greeting-blink" style="font-size: 36px;" (click)="greetingRecieved(user)"></ion-icon> -->
-              <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
-              <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+              <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+              <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
             </div>
           </div>
         </div>
