--- a/src/app/pages/media-viewer/media-viewer.page.scss
+++ b/src/app/pages/media-viewer/media-viewer.page.scss
@@ -34,10 +34,27 @@ ion-content {
     top: 0;
   }
 
-  img {
-    // object-fit: cover;
-    width: 100%;
+  // img {
+  //   object-fit: cover;
+  //   width: 100%;
+  //   height: 100%;
+  // }
+
+  .image_container{
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fi-user-img {
+    // width: 116px;
+    width: 180px;
+    // height: 116px;
+    height: 180px;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    object-fit: cover;
   }
 }
 
