--- a/src/app/pages/map/viewing-users/viewing-users.component.html
+++ b/src/app/pages/map/viewing-users/viewing-users.component.html
@@ -21,19 +21,35 @@
   </ion-toolbar>
 
   <div class="maptab" *ngIf="viewTemplate == 'Viewing'">
-    <ion-button shape="round" [ngClass]="{'active':viewType == 1}" (click)="onViewTypeChange(1)">
+    <ion-button shape="round" [ngClass]="{'active':viewType == 1}"
+      (click)="onViewTypeChange(1)">
       Viewing
     </ion-button>
-    <ion-button shape="round" [ngClass]="{'active':viewType == 2}" (click)="onViewTypeChange(2)">
+    <ion-button shape="round" [ngClass]="{'active':viewType == 2}"
+      (click)="onViewTypeChange(2)">
       Ignored
     </ion-button>
   </div>
 
-  <div class="maptab" *ngIf="viewTemplate != 'Viewing'">
-    <ion-button shape="round" [ngClass]="{'active':activeOrExpired == 1}" (click)="activeExpiredGreeting(1)">
+  <div style="justify-content: center; align-items: center;" class="maptab"
+    *ngIf="viewTemplate != 'Viewing'">
+    <ion-button style="width: 152px;
+    height: 34px;
+    background: #F0F5F7 0% 0% no-repeat padding-box;
+    border-radius: 17px;
+    opacity: 1;" class="activeclass" shape="round"
+      [ngClass]="{'active':activeOrExpired == 1}"
+      (click)="activeExpiredGreeting(1)">
       Active
     </ion-button>
-    <ion-button shape="round" [ngClass]="{'active':activeOrExpired == 2}" (click)="activeExpiredGreeting(2)">
+
+    <ion-button style="width: 152px;
+    height: 34px;
+    background: #F0F5F7 0% 0% no-repeat padding-box;
+    border-radius: 17px;
+    opacity: 1;" class="activeclass" shape="round"
+      [ngClass]="{'active':activeOrExpired == 2}"
+      (click)="activeExpiredGreeting(2)">
       Expired
     </ion-button>
   </div>
@@ -45,22 +61,66 @@
       <!-- *ngFor="let user of viewTemplate == 'Viewing'? _commonService.viewingUsers: _commonService.greetingWithDetails ;let i=index"> -->
       <div
         *ngFor="let user of viewTemplate == 'Viewing'? viewList.names : filteredGreetingList ;let i=index">
-        <div *ngIf="filteredGreetingList.length > 0 || viewList.names.length > 0" class="lines-bottom ion-padding">
-          <div *ngIf="viewTemplate != 'Viewing' " (click)="openUser(user)" class="display-flex--row flex-align-center">
+        <div
+          *ngIf="filteredGreetingList.length > 0 || viewList.names.length > 0"
+          class="lines-bottom ion-padding">
+          <div *ngIf="viewTemplate != 'Viewing' " style="gap: 0px !important;"
+            (click)="openUser(user)"
+            class="display-flex--row flex-align-center">
             <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-              <img animation="gradient" src="{{appConstants.mediaPrefix + ((user.CreatedBy.ProfileImage) || (user.UserProfilePhoto)) }}"
-              onError="this.src='assets/icons/business/anonymous.svg'"
+              <img style="width: 59px; height: 59px; border-radius: 50%;" animation="gradient"
+                src="{{appConstants.mediaPrefix + ((user.CreatedBy.ProfileImage) || (user.UserProfilePhoto)) }}"
+                onError="this.src='assets/icons/business/anonymous.svg'"
                 alt="User Profile">
             </ion-avatar>
-            <div class="font-primary-text" (click)="viewConnection(user)">
-              <span class="font-sz-14">{{ (user.CreatedBy.UserName)|| (user.UserName) }}</span>
+            <div
+              style="display: flex; justify-content: space-between; width: 100%;">
+              <div
+                style="display: flex; justify-content: center; align-items: center;"
+                class="font-primary-text" (click)="viewConnection(user)">
+                <ion-icon style="font-size: 35px !important;"
+                  name="unconnected"></ion-icon>
+                <span class="username font-sz-14">{{ (user.CreatedBy.UserName)
+                  || (user.UserName) }}</span>
+              </div>
+              <div
+                style="text-align: center; justify-content: center; display: flex; align-items: center; margin-left: 3px; gap: 5px;">
+                <ion-icon name="acceptedgreendot"></ion-icon>
+                <p class="acceptedreq">Accepted</p>
+              </div>
+              <div
+                style="display: flex; align-items: center; margin-left: auto;">
+                <ion-icon name="chat-3dots"></ion-icon>
+              </div>
             </div>
+
           </div>
 
-          <div *ngIf="viewTemplate == 'Viewing'"  (click)="openUser(user)" class="display-flex--row flex-align-center">
+          <div style="display: flex;  justify-content: space-between; align-items: center; ">
+            <div style="display: flex; flex-direction: column; ">
+              <p style="margin-bottom: 0px !important;">200 Posts - 5.2k Connections</p>
+              <div style="display: flex; gap: 10px;">
+                <p>1/12/2020</p>
+                <p>11:45 PM</p>
+              </div>
+            </div>
+          
+            <greeting-view *ngIf="viewTemplate != 'Viewing' "
+            [fromUserId]="user.CreatedBy.Id || user.UserId"
+            [fromUserName]="user.CreatedBy.UserName || user.UserName"
+            [fromUserProfile]="(user.CreatedBy.Id + '/' + user.CreatedBy.ProfileImage) || (user.UserId + '/' + user.UserProfilePhoto)"
+            [userInfo]="user">
+          </greeting-view>
+        
+          </div>
+          
+
+          <div *ngIf="viewTemplate == 'Viewing'" (click)="openUser(user)"
+            class="display-flex--row flex-align-center">
             <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-              <img animation="gradient" src="{{appConstants.mediaPrefix + user.UserProfilePhoto }}"
-              onError="this.src='assets/icons/business/anonymous.svg'"
+              <img animation="gradient"
+                src="{{appConstants.mediaPrefix + user.UserProfilePhoto }}"
+                onError="this.src='assets/icons/business/anonymous.svg'"
                 alt="User Profile">
             </ion-avatar>
             <div class="font-primary-text" (click)="viewConnection(user)">
@@ -69,28 +129,35 @@
           </div>
 
           <div class="display-flex--row flex-align-center">
-            <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">1 Miles away </div>
+            <!-- <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">1 Miles away </div> -->
             <div class="action-list">
 
-              <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-              <ion-icon *ngIf="viewTemplate == 'Viewing' " name="greeting-blink" style="font-size: 36px;" (click)="greetingRecieved(user)"></ion-icon>
-              <greeting-view *ngIf="viewTemplate != 'Viewing' "  [fromUserId]="user.CreatedBy.Id || user.UserId" [fromUserName]="user.CreatedBy.UserName || user.UserName"
-                [fromUserProfile]="(user.CreatedBy.Id + '/' + user.CreatedBy.ProfileImage) || (user.UserId + '/' + user.UserProfilePhoto)" [userInfo]="user">
-              </greeting-view>
+              <!-- <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon> -->
+              <!-- <ion-icon *ngIf="viewTemplate == 'Viewing' " name="greeting-blink"
+                style="font-size: 36px;"
+                (click)="greetingRecieved(user)"></ion-icon> -->
+              <!-- <greeting-view *ngIf="viewTemplate != 'Viewing' "
+                [fromUserId]="user.CreatedBy.Id || user.UserId"
+                [fromUserName]="user.CreatedBy.UserName || user.UserName"
+                [fromUserProfile]="(user.CreatedBy.Id + '/' + user.CreatedBy.ProfileImage) || (user.UserId + '/' + user.UserProfilePhoto)"
+                [userInfo]="user">
+              </greeting-view> -->
               <!-- <greeting-view *ngIf="viewTemplate == 'Viewing' "  [fromUserId]="user.UserId" [fromUserName]="user.UserName"
                 [fromUserProfile]="user.UserId + '/' + user.UserProfilePhoto" [userInfo]="user">
               </greeting-view> -->
               <!-- <ion-icon name="greeting-blink" style="font-size: 36px;" (click)="greetingRecieved(user)"></ion-icon> -->
-              <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
-              <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+              <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+              <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
             </div>
           </div>
         </div>
       </div>
-      <div *ngIf="viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 1">
+      <div
+        *ngIf="viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 1">
         <p>Currently No Active Greeting Requests!</p>
       </div>
-      <div *ngIf="viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 2">
+      <div
+        *ngIf="viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 2">
         <p>Currently No Expired Greeting Requests!</p>
       </div>
     </ion-list>
