--- a/src/app/pages/map/viewing-users/viewing-users.component.scss
+++ b/src/app/pages/map/viewing-users/viewing-users.component.scss
@@ -28,3 +28,31 @@ ion-title{
         --padding-start: 25px;
     }
 }
+.activeclass{
+    font: var(--unnamed-font-style-normal) normal normal var(--unnamed-font-size-13)/15px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-285078);
+text-align: left;
+font: normal normal normal 13px/15px SF Pro Display;
+letter-spacing: -0.08px;
+color: #285078;
+}
+
+.username{
+font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 18px/21px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-285078);
+text-align: left;
+font: normal normal 600 18px/21px SF Pro Display;
+letter-spacing: 0.29px;
+color: #285078;
+opacity: 1;
+}
+.acceptedreq{
+font: var(--unnamed-font-style-normal) normal normal var(--unnamed-font-size-13)/15px var(--unnamed-font-family-sf-pro-display);
+text-align: left;
+font: normal normal normal 15px/17px SF Pro Display;
+letter-spacing: -0.08px;
+color: #43E63C;
+text-align: center;
+font-weight: 600;
+}
+
