--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -104,7 +104,7 @@
     </ng-template>
   </ion-modal>
 
-  <ion-modal #markerDetailModal [initialBreakpoint]="0.33" [breakpoints]="[0, 0.33, 0.5, 0.75]" handle="false">
+  <ion-modal #markerDetailModal [initialBreakpoint]="0.5" [breakpoints]="[0, 0.5, 0.75]" handle="false">
     <ng-template>
       <div (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
         <app-marker-detail [markerCurrentIndex]="markerCurrentIndex" [markerList]="mainResultFromSearch"
