add greeting icons, fixed greeting issue

--- a/src/app/pages/map/viewing-users/viewing-users.component.scss
+++ b/src/app/pages/map/viewing-users/viewing-users.component.scss
@@ -51,7 +51,7 @@ font: var(--unnamed-font-style-normal) normal normal var(--unnamed-font-size-13)
 text-align: left;
 font: normal normal normal 15px/17px SF Pro Display;
 letter-spacing: -0.08px;
-color: #43E63C;
+// color: #43E63C;
 text-align: center;
 font-weight: 600;
 }
