--- a/src/app/pages/sidemenu/events/event-view/event-view.page.html
+++ b/src/app/pages/sidemenu/events/event-view/event-view.page.html
@@ -88,13 +88,12 @@
       </div>
     </ion-item>
 
-    <ion-item lines="none">
+    <!-- <ion-item lines="none">
       <div>
         <ion-text>
           <h4 style="font-size: 17px; color: #285078;">Location</h4>
         </ion-text>
         <ion-text>
-          <!-- <p class="ion-no-margin">{{event.location}} location</p> -->
         </ion-text>
       </div>
     </ion-item> 
@@ -104,11 +103,9 @@
           <h4>Offset location</h4>
         </ion-text>
         <ion-text>
-          <!-- <p class="ion-no-margin"*ngIf="!event.locationOffset">Disabled</p>
-          <p class="ion-no-margin"*ngIf="event.locationOffset">Enabled</p> -->
         </ion-text>
       </div>
-    </ion-item>
+    </ion-item> -->
 
   </ion-list>
 </ion-content>
