--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -294,27 +294,27 @@
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
                 <img class="user-logo-main"
-                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                  src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
+                <span class="font-sz-14">{{user['Title']}}</span>
               </div>
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12"
+              <!-- <div class="font-secoundry-text font-sz-12"
                 style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
-                : '1.2-2' }} Miles away </div>
+                : '1.2-2' }} Miles away </div> -->
               <div class="action-list">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                   (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']"
-                  [fromUserName]="user['DisplayName']"
-                  [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;"
-                  (click)="blockUser()"></ion-icon>
+                <!-- <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['FirstName']"
+                  [fromUserProfile]="'/' + user['ProfilePhoto']">
+                </greeting-view> -->
+                <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -338,27 +338,27 @@
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
                 <img class="user-logo-main"
-                  src="{{appConstants.mediaPrefix + user['Image']}}"
+                  src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
+                <span class="font-sz-14">{{user['Title']}}</span>
               </div>
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12"
+              <!-- <div class="font-secoundry-text font-sz-12"
                 style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
-                : '1.2-2' }} Miles away </div>
+                : '1.2-2' }} Miles away </div> -->
               <div class="action-list">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                   (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']"
+                <!-- <greeting-view [fromUserId]="user['UserId']"
                   [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
                 <ion-icon name="chat-ignore" style="font-size: 36px;"
-                  (click)="blockUser()"></ion-icon>
+                  (click)="blockUser()"></ion-icon> -->
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -386,23 +386,23 @@
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
+                <span class="font-sz-14">{{user['Title']}}</span>
               </div>
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12"
+              <!-- <div class="font-secoundry-text font-sz-12"
                 style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
-                : '1.2-2' }} Miles away </div>
+                : '1.2-2' }} Miles away </div> -->
               <div class="action-list">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                   (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']"
+                <!-- <greeting-view [fromUserId]="user['UserId']"
                   [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
                 <ion-icon name="chat-ignore" style="font-size: 36px;"
-                  (click)="blockUser()"></ion-icon>
+                  (click)="blockUser()"></ion-icon> -->
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -442,10 +442,10 @@
               <div class="action-list">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
                   (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']"
+                <!-- <greeting-view [fromUserId]="user['UserId']"
                   [fromUserName]="user['FirstName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']">
-                </greeting-view>
+                </greeting-view> -->
                 <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
